[project]
name = "incident-responder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "crewai>=1.8.1",
    "crewai-tools>=1.8.1",
    "fastapi>=0.128.0",
    "pydantic>=2.11.9,<2.12.dev0",
    "python-dotenv>=1.1.1,<1.2.dev0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
